--- a/Quizzed/app/src/main/AndroidManifest.xml
+++ b/Quizzed/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    xmlns:tools="http://schemas.android.com/tools"
+
+    package="com.quizmaster.quizzed">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,16 +17,28 @@
         android:theme="@style/Theme.Quizzed"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.QuestionActivity"
+            android:exported="false" />
+        <activity android:name=".activity.ProfileActivity"/>
+
+        <!--        <activity-->
+<!--            android:name=".activity.GoogleSignInHelper"-->
+<!--            android:exported="false" />-->
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activity.ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".SignupActivity"
+            android:name=".activity.SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginIntro"
+            android:name=".activity.LoginIntro"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
